<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroUsuario">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".activity_cadastro_usuario">

        <TextView
            style="@style/textTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastroUsuarioTitulo" />

        <EditText style="@style/editText"
        android:id="@+id/txtNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtNome"
        android:inputType="text" />

        <EditText style="@style/editText"

        android:id="@+id/txtSobrenome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtSobrenome"
        android:inputType="text" />

        <EditText style="@style/editText"

        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtEmail"

        android:inputType="textEmailAddress" />

        <EditText style="@style/editText"

        android:id="@+id/txtLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtLogin"

        android:inputType="text" />

        <EditText style="@style/editText"
        android:id="@+id/txtSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtSenha"

        android:inputType="text" />

        <Button
            android:id="@+id/btnCadastrarUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cadastrar Usuário"
            style="@style/btnForm"/>
    </LinearLayout>

</ScrollView>