<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroLivro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        tools:contex=".CadastroLivroActicity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/cadastroLivroTitulo"
            style="@style/textTitulo"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/txtNome"
            android:inputType="text"
            android:hint="@string/txtNomeLivro"
            />

        <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/txtDescricao"
        android:inputType="text"
        android:hint="@string/txtDescricaoLivro"
        />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/txtFoto"
            android:inputType="text"
            android:hint="@string/txtLivroFoto"
            />

        <Button
            android:id="@+id/btnCadastrarLivro"
            android:text="cadastar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/btnForm"/>


    </LinearLayout>


</ScrollView>